Fix empty white space
Gap between articles!

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -292,15 +292,14 @@ body {
 .article-container-4 {
   display: grid;
   margin: 10px;
-  grid-template-columns: minmax(200px, 1fr) 0 minmax(200px, 1fr);
+  grid-template-columns: minmax(200px, 1fr)  minmax(200px, 1fr);
   justify-content: center;
-  grid-gap: 20px;
   grid-template-rows: repeat(4, 185px);
   grid-template-areas:
-    "a14 a14 a14"
-    "a15 . a16"
-    "a17 . a18"
-    "a19 . a20";
+    "a14  a14"
+    "a15  a16"
+    "a17  a18"
+    "a19  a20";
   text-align: center;
 }
 
